# errnum

./: .gitignore  CMakeLists.txt  errnum.c  errnum.h
include/: errnum.h
src/: errnum.c
